--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,17 @@
 
 # Composer PHAR
 /composer.phar
+
+#Gitignore Symphony
+/app/bootstrap.php.cache
+/app/cache/*
+!app/cache/.gitkeep
+/app/config/parameters.yml
+/app/logs/*
+!app/logs/.gitkeep
+/app/phpunit.xml
+/bin/
+/composer.phar
+/vendor/
+/web/bundles/
+/.idea/
