install sonata admin, sonata user, and add block in sonata admin dashboard

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,3 +7,8 @@ services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    admin.party:
+        class: partyBundle\Admin\PartyAdmin
+        arguments: [~, partyBundle\Entity\Party, ~]
+        tags:
+            - { name: sonata.admin, manager_type: orm, group: "Party", label: "Party" }
