--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,15 @@
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "sonata-project/admin-bundle": "2.3.*",
+        "sonata-project/doctrine-orm-admin-bundle": "^2.3",
+        "sonata-project/easy-extends-bundle": "^2.1",
+        "sonata-project/user-bundle": "^2.2",
+        "knplabs/knp-menu-bundle": "~1.1",
+        "twbs/bootstrap": "^3.3",
+        "mopa/bootstrap-bundle": "v3.0.0-rc1",
+        "twbs/bootstrap-sass": "~3.3.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
