creation relation many to many table user et party ==> not work

--- a/src/partyBundle/Resources/config/doctrine/Party.orm.yml
+++ b/src/partyBundle/Resources/config/doctrine/Party.orm.yml
@@ -20,3 +20,18 @@ partyBundle\Entity\Party:
         nblimit:
             type: integer
     lifecycleCallbacks: {  }
+    manyToMany:
+        User:
+            targetEntity: Application\Sonata\UserBundle\Entity\User
+            mappedBy: party
+#    manyToMany:
+#        Party:
+#            targetEntity: partyBundle\Entity\Party
+#            joinTable:
+#                name: participation
+#                joinColumns:
+#                    party_id:
+#                        referencedColumnName: id
+#                inverseJoinColumns:
+#                    user_id:
+#                        referencedColumnName: id
