ajout du crud sur entity party

--- a/src/partyBundle/Resources/config/routing.yml
+++ b/src/partyBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
+party_party:
+    resource: "@partyBundle/Resources/config/routing/party.yml"
+    prefix:   /party
+
 party_homepage:
     path:     /hello/{name}
     defaults: { _controller: partyBundle:Default:index }
