--- a/src/partyBundle/Resources/config/doctrine/Party.orm.yml
+++ b/src/partyBundle/Resources/config/doctrine/Party.orm.yml
@@ -19,8 +19,13 @@ partyBundle\Entity\Party:
             length: 255
         nblimit:
             type: integer
+        nbPersonne:
+            type: integer
     lifecycleCallbacks: {  }
-    manyToMany:
-        users:
-            targetEntity: FOS\UserBundle\Entity\User
-            mappedBy: participant
+
+    manyToOne:
+        user:
+            targetEntity: Application\Sonata\UserBundle\Entity\User
+            joinColumn:
+                name: user_id
+                referencedColumnName: id
